added rate limiting and JWT authentication, added login, logout routes
